<resources>
    <!-- General app resources -->
    <string name="app_name">teammanagementdemo</string>
    <string name="app_version">1.0</string>
    <string name="app_error_version">"Build appVersion and resource appVersion doesn't match, you must update string resource app_version before continue"</string>
    <string name="mainActivityTitle">Main Page</string>

    <!-- LoginActivity -->
    <string name="splashscreen_appname">team management</string>
    <string name="splashscreen_organizationname">@string/organization_name</string>
    <string name="splashscreen_desc_loadinglogo">loading using logo of team</string>


    <!-- HeaderActivity -->
    <string name="navigation_option_dailyentries">Daily Entries</string>
    <string name="navigation_option_manageSurvey">Manage Survey</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_logout">Logout</string>

    <!-- DevOptionsFragment -->
    <string name="sp_opt_01">questions</string>
    <string name="sp_opt_02">players</string>
    <string name="sp_opt_03">trainers</string>
    <string name="sp_opt_04">teams</string>
    <string name="sp_opt_05">surveys</string>

    <!-- All literals related to TeamFlavour-->
    <string name="organization_name">CB Sant Carles</string>


    <!-- All literals related to QuestionView -->
    <string name="question_demo_statment">Are you okay?</string>
    <string name="question_affirmative">Yes</string>
    <string name="question_negative">No</string>
    <string name="question_picture_desc">Picture of questions</string>
    <string name="question_edittext_hint">Response</string>
    <string name="title_activity_week_preview">WeekPreviewActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <!-- SignupTrainerActivity -->
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_finish">Finish</string>
    <string name="button_ok">OK</string>

    <!-- TMDDialog Controller -->
    <string name="controller_dialog_description_example">Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum Loreipsum</string>
    <string name="controller_dialog_title_example">Are you sure want to set title?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
