<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorInvisible">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/controller_dialog_title_example"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivIcon"
        android:textSize="20sp"
        android:layout_margin="@dimen/buttons_margin"/>

    <ImageView
        android:layout_margin="@dimen/buttons_margin"
        android:id="@+id/ivIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:src="@android:drawable/ic_dialog_alert"
        android:tint="@android:color/holo_orange_light"
        app:layout_constraintStart_toEndOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvDescription"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/controller_dialog_description_example"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toTopOf="@id/btnOk"
        android:layout_margin="@dimen/buttons_margin"/>
    <Button
        android:id="@+id/btnOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_ok"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        android:layout_margin="@dimen/buttons_margin"/>

    <Button
        android:id="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        android:layout_margin="@dimen/buttons_margin"/>
</androidx.constraintlayout.widget.ConstraintLayout>